--- a/home/templates/home/articles.html
+++ b/home/templates/home/articles.html
@@ -408,7 +408,7 @@
 													<p>{{ article.abstract_snippet }}</p>
 												</div>
 												<a class="sj-btn" href="{% url 'home:article_detail_view' SLUG=article.article_slug %}">View Full Article</a>
-												<a class="sj-btn sj-btnactive" href="{{ article.article_DOI }}">Download Article</a>
+												<a class="sj-btn sj-btnactive" href="{{ article.article_file_url }}" download>Download Article</a>
 											</div>
 										</article>
 										{% endfor %}
