--- a/home/templates/home/articledetail.html
+++ b/home/templates/home/articledetail.html
@@ -43,6 +43,7 @@
 		{% if article.author %}
 		{{ article.author.first_name }} {{ article.author.last_name }}
 		{% else %} 
+		{{ first_co_author}} 
 		{% endif} - 
 		{{ article.article_abstract }}">
 
