added author name description tag

--- a/home/templates/home/articledetail.html
+++ b/home/templates/home/articledetail.html
@@ -44,7 +44,7 @@
 		{{ article.author.first_name }} {{ article.author.last_name }}
 		{% else %} 
 		{{ first_co_author}} 
-		{% endif} - 
+		{% endif %} - 
 		{{ article.article_abstract }}">
 
 	<meta name="keywords" content="{{ article.article_keywords }}
