--- a/home/templates/home/publication_policies.html
+++ b/home/templates/home/publication_policies.html
@@ -259,7 +259,7 @@
 							<div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
 								<div id="sj-content" class="sj-content">
 									<div class="sj-authorguidelines">
-										<figure class="sj-guidelineimg" style="height: 350px;"><img style="height: 100%;" src="{% static 'images/pub_pol_bg.jpeg' %}" alt="image description"></figure>
+										<figure class="sj-guidelineimg" style="height: 350px;"><img id="index-banner" style="height: 100%;" src="{% static 'images/pub_pol_bg.jpeg' %}" alt="image description"></figure>
 										<div class="sj-introduction sj-sectioninnerspace">
 											<span>Information for Authors</span>
 											<h4>A Complete Guideline</h4>
@@ -444,6 +444,19 @@
 			<!--************************************
 					Main End
 			*************************************-->
+
+			<script>
+				const img = document.getElementById('index-banner');
+				const screenWidth = window.innerWidth;
+
+				if (screenWidth <= 480) { 
+					img.src = "{% static 'images/WORD-ASTRA-BANNER-mobilepng.png' %}";
+					img.style.height = "17rem"
+				} else {
+					img.src = "{% static 'images/WORD-ASTRA-BANNER.png' %}";
+					img.style.height = "22rem"
+				}
+			</script>
 
             {% endblock body %}
 			<!--************************************
